<resources>
    <string name="app_name">Fitness Together!</string>
    <string name="fitness_together">Fitness Together</string>
    <string name="Register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="Surname">Фамилия</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="next">Продолжить</string>
    <string name="signIn">Войти</string>
    <string name="haveAnAccount">Уже есть аккаунт?</string>
    <string name="confidenctialAgreement">Регистрируясь, вы соглашаетесь с условиями использования приложения и политикой конфиденциальности</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="customer">Ученик</string>
    <string name="coach">Тренер</string>
    <string name="organisation">Организация</string>
    <string name="experience">Опыт работы</string>
    <string name="login">Логин</string>
    <string name="passwordSign">Пароль</string>
    <string name="enter">Войти</string>
    <string name="navigation_logo">navigation_logo</string>
    <string name="fitness_together_with_mark">Fitness Together!</string>
    <string name="trainees">Тренировки</string>
    <string name="nav_drawer_open">Открыть меню навигации</string>
    <string name="nav_drawer_close">Закрыть меню навигации</string>
    <string name="account">Аккаунт</string>
    <string name="addPhoto">Добавь фото</string>
    <string name="description">Описание</string>
    <string name="customers">Ученики</string>
</resources>