<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FTText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/fitness_together"
            android:textColor="#000000"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/LoginSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/Register"
            android:textColor="#FF8C00"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ChooseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="Выберите тип"
            android:textColor="#000000"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/coachButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/coach"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/customerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/customer"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Next"
            android:layout_width="269dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF8C00"
            android:text="@string/next" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/confidenctialAgreement"
            android:textColor="#848282"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/HaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/haveAnAccount"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/signIn"
            android:textColor="#FF8C00"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>